@@ -38,6 +38,10 @@
 <p>2015-03-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/wmf.c (ipa_device_begin): Silence Coverity 44753 &quot;Copy
+into fixed size buffer&quot;.
+(lite_font_map): Silence Coverity 44752 &quot;Copy into fixed size
+buffer&quot;.</li>
 <li>magick/random.c (InitializeMagickRandomKernel): Silence Coverity
 10091 &quot;Don't Call&quot; in the case where /dev/random is available.</li>
 <li>coders/mpeg.c (WriteMPEGParameterFiles): Fix Coverity 10190
