@@ -1,5 +1,10 @@
 2015-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/wmf.c (ipa_device_begin): Silence Coverity 44753 "Copy
+	into fixed size buffer".
+	(lite_font_map): Silence Coverity 44752 "Copy into fixed size
+	buffer".
+
 	* magick/random.c (InitializeMagickRandomKernel): Silence Coverity
 	10091 "Don't Call" in the case where /dev/random is available.
 
